--- a/app/views/layouts/petitions.html.haml
+++ b/app/views/layouts/petitions.html.haml
@@ -7,7 +7,7 @@
     %meta{"property" => "og:title", "content" => "Tell " + @petition.target.first_name + " " + @petition.target.last_name + ": " + @petition.title }
     %meta{"property" => "og:type", "content" => "cause"}
     %meta{"property" => "og:url", "content" => @petition.short_url}
-    %meta{"property" => "og:image", "content" => @petition.header_image("full_size")}
+    %meta{"property" => "og:image", "content" => @petition.header_image("full")}
     %meta{"property" => "og:site_name", "content" => "www.snaptivist.com"}
     %meta{"property" => "og:locale", "content" => "en_US"}
 
