--- a/app/assets/stylesheets/layouts/layout2.css.scss
+++ b/app/assets/stylesheets/layouts/layout2.css.scss
@@ -31,7 +31,8 @@
 		min-height: 350px;
 	}
 	#petition-image {
-		background-size: cover; 
+		background-size: 350px 350px;
+		background-repeat: no-repeat;
 		height: 350px;
 	}
 	#delivery-container {
