refactored time ago on comment

--- a/app/assets/stylesheets/layouts/layout2-responsive.css.scss
+++ b/app/assets/stylesheets/layouts/layout2-responsive.css.scss
@@ -69,6 +69,15 @@
 					}
 				}
 			}
+			.comment {
+				.location-wrapper {
+					text-align: left;
+				}
+				.comment-timeago {
+					font-size: 1em;
+					line-height: 1em;
+				}
+			}	
 		}
 		#more-signers-button-wrapper { 
 			#more-signers-button {
