--- a/app/views/client_views/layout2/signature_template.html.haml
+++ b/app/views/client_views/layout2/signature_template.html.haml
@@ -79,7 +79,7 @@
 									.col-md-6
 										.user-name
 											{{signature.user.first_name + " " + signature.user.last_name}}
-									.col-md-6.text-right
+									.col-md-6.location-wrapper
 										.location
 											{{format_signature_location(signature)}}
 								.comment-timeago
