add nb crm setting page

--- a/app/views/layouts/clients/_header.html.haml
+++ b/app/views/layouts/clients/_header.html.haml
@@ -25,6 +25,10 @@
             %ul.dropdown-menu{:style=>"width: 100%"}
               %li.dropdown-menu-title
               %li
+                %a{"href" => "/clients/1/crm_setup"}
+                  %i.icon-off.pull-left
+                  = "CRM Setup"
+              %li
                 %a{"href" => "/auth/logout"}
                   %i.icon-off.pull-left
                   = "Logout"
