fixed type in stylesheet

--- a/app/assets/stylesheets/layouts/layout1.css.scss
+++ b/app/assets/stylesheets/layouts/layout1.css.scss
@@ -233,7 +233,7 @@
         content: ' ';
         top: 17px;
         width: 20px;
-        height: 280pxpx;
+        height: 20px;
         background: #ffffff;
         -moz-border-radius: 12px;
         -webkit-border-radius: 12px;
