--- a/app/assets/stylesheets/clients/clients.css.scss
+++ b/app/assets/stylesheets/clients/clients.css.scss
@@ -1,6 +1,9 @@
 body {
  	background: #f4f4f4
 }
+.row-wrapper-fluid {
+  padding: 0 15px;
+}
 .no-gutter[class*='col-md-'] {
 	padding-right: 0px;
 	margin-right: 0px;
