fixed container on layout2

--- a/app/views/client_views/layout1/delivery_template.html.haml
+++ b/app/views/client_views/layout1/delivery_template.html.haml
@@ -1,4 +1,4 @@
-.container.text-center
+.text-center
   %div{"image-upload-overlay"=>"", "title"=>"Add Header Image", "notes"=>"Recommended image size: 950x250px", "image-name"=>"image_full"}
     .drop-shadow.lifted#header-image{"ng-style" => "signature_image_styling()"}
   %h2#petition-headline.contenteditable.placeholer-showing{"contenteditable"=>"", "ng-model" => "petition.delivery_headline_primary", "strip-br"=>"true", "select-non-editable"=>"true", "data-placeholder"=>"Delivery Headline", "name"=>"delivery_headline_primary", "required"=>""}
