--- a/app/views/clients/partials/_email_config_sidebar.ng.html.haml
+++ b/app/views/clients/partials/_email_config_sidebar.ng.html.haml
@@ -1,5 +1,5 @@
 %h6
 	Email Configuration
-%div{:style=>"padding: 4px 8px;", "ng-repeat"=>"email_type in email_types"}
+%div{:style=>"padding: 4px 8px;", "ng-repeat"=>"email_type in system.email_types"}
 	%h5 {{email_type.name}}
 	%p {{email_type.description}}
