--- a/app/views/clients/_petitions.ng.html.haml
+++ b/app/views/clients/_petitions.ng.html.haml
@@ -3,11 +3,21 @@
 		%h1
 			Your Petitions
 		.panel{:style=>"padding: 10px;", "ng-repeat"=>"petition in petitions"}
-			%h2{:style=>"margin-top: 0px; margin-bottom: 2px;k"} 
-				{{petition.name}}
-			%h3{:style=>"margin-top: 0px; margin-bottom: 20px;"} 
-				{{petition.headline_primary}}
-
+			.row-wrapper-fluid
+				.row
+					.col-md-6
+						%h2{:style=>"margin-top: 0px; margin-bottom: 2px;k"} 
+							{{petition.name}}
+						%h3{:style=>"margin-top: 0px; margin-bottom: 20px;"} 
+							{{petition.headline_primary}}
+					.col-md-6.text-right
+						%ul.list-unstyled
+							%li
+								%a{"ng-href"=>"{{petition.short_url}}"}
+									{{petition.short_url}}
+							%li
+								%a{"ng-href"=>"{{petition_url(petition)}}"}
+									{{petition_url(petition)}}
 			.row-wrapper-fluid
 				.row
 					.col-md-12
