--- a/app/assets/stylesheets/layouts/layout2.css.scss
+++ b/app/assets/stylesheets/layouts/layout2.css.scss
@@ -1,4 +1,5 @@
 #action-container {
+	position: relative;
 	h1, h2, h3, h4, h5, h6, p, .section-header, button {
 		font-family: "Raleway", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	}
